// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CombinedChart renders combined stack chart 1`] = `
<div
  aria-labelledby="stack-chart-tab-button"
  class="stackChart"
  id="stack-chart-tab"
  role="tabpanel"
>
  <div
    class="stackSettings"
  >
    <ul
      class="panelSettingsList"
    >
      <li
        class="panelSettingsListItem"
      >
        <input
          checked=""
          class="photon-radio photon-radio-micro"
          id="implementation-radio-combined"
          title="Do not filter the stack frames"
          type="radio"
          value="combined"
        />
        <label
          class="photon-label photon-label-micro photon-label-horiz-padding"
          for="implementation-radio-combined"
          title="Do not filter the stack frames"
        >
          All frames
        </label>
        <input
          class="photon-radio photon-radio-micro"
          id="implementation-radio-js"
          title="Show only the stack frames related to script execution"
          type="radio"
          value="js"
        />
        <label
          class="photon-label photon-label-micro photon-label-horiz-padding"
          for="implementation-radio-js"
          title="Show only the stack frames related to script execution"
        >
          Script
        </label>
        <input
          class="photon-radio photon-radio-micro"
          id="implementation-radio-cpp"
          title="Show only the stack frames for native code"
          type="radio"
          value="cpp"
        />
        <label
          class="photon-label photon-label-micro photon-label-horiz-padding"
          for="implementation-radio-cpp"
          title="Show only the stack frames for native code"
        >
          Native
        </label>
      </li>
      <li
        class="panelSettingsListItem"
      >
        <label
          class="photon-label photon-label-micro photon-label-horiz-padding"
        >
          <input
            class="photon-checkbox photon-checkbox-micro stackSettingsCheckbox"
            type="checkbox"
          />
          Show user timing
        </label>
        <label
          class="photon-label photon-label-micro photon-label-horiz-padding"
        >
          <input
            class="photon-checkbox photon-checkbox-micro stackSettingsCheckbox"
            type="checkbox"
          />
          Use the same width for each stack
        </label>
      </li>
    </ul>
    <div
      class="panelSearchField stackSettingsSearchField"
    >
      <label
        class="panelSearchFieldLabel"
      >
        Filter stacks: 
        <form
          class="idleSearchField panelSearchFieldInput"
        >
          <input
            class="idleSearchFieldInput photon-input"
            name="search"
            placeholder="Enter filter terms"
            required=""
            title="Only display stacks which contain a function whose name matches this substring"
            type="search"
            value=""
          />
          <input
            class="idleSearchFieldButton"
            tabindex="-1"
            type="reset"
          />
        </form>
      </label>
      <div
        class="panelSearchFieldIntroduction isHidden"
      >
        Did you know you can use the comma (,) to search using several terms?
      </div>
    </div>
  </div>
  <ol
    class="filterNavigatorBar calltreeTransformNavigator"
  >
    <li
      class="filterNavigatorBarItem filterNavigatorBarRootItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem"
    >
      <span
        class="filterNavigatorBarItemContent"
      >
        Complete “⁨Empty⁩”
      </span>
    </li>
  </ol>
  <div
    class="react-contextmenu-wrapper treeViewContextMenu"
  >
    <div
      class="stackChartContent"
    >
      <div
        class="chartViewport"
        tabindex="0"
      >
        <div>
          <canvas
            class="chartCanvas stackChartCanvas"
            height="300"
            style="width: 365px; height: 300px;"
            width="365"
          />
        </div>
        <div
          class="chartViewportScroll hidden"
        >
          Zoom Chart:
          <kbd
            class="chartViewportScrollKbd"
          >
            Ctrl + Scroll
          </kbd>
          or
          <kbd
            class="chartViewportScrollKbd"
          >
            Shift + Scroll
          </kbd>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CombinedChart renders combined stack chart 2`] = `
Array [
  Array [
    "set font",
    "10px sans-serif",
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    0,
    365,
    300,
  ],
  Array [
    "set fillStyle",
    "#ffe90070",
  ],
  Array [
    "fillRect",
    150,
    0,
    666.4,
    15,
  ],
  Array [
    "measureText",
    "renderFunction",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "renderFunction",
    153,
    11,
  ],
  Array [
    "set fillStyle",
    "#ffe90070",
  ],
  Array [
    "fillRect",
    216,
    16,
    533.4,
    15,
  ],
  Array [
    "measureText",
    "componentA",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "componentA",
    219.66666666666666,
    27,
  ],
  Array [
    "set fillStyle",
    "#ffe90070",
  ],
  Array [
    "fillRect",
    283,
    32,
    266.4,
    15,
  ],
  Array [
    "measureText",
    "componentB",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "componentB",
    286.3333333333333,
    43,
  ],
  Array [
    "set fillStyle",
    "#ffe90070",
  ],
  Array [
    "fillRect",
    350,
    48,
    66.4,
    15,
  ],
  Array [
    "measureText",
    "componentC",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "componentC",
    353,
    59,
  ],
  Array [
    "set fillStyle",
    "#0060df60",
  ],
  Array [
    "fillRect",
    150,
    64,
    199.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "A",
    153,
    75,
  ],
  Array [
    "set fillStyle",
    "#0060df60",
  ],
  Array [
    "fillRect",
    150,
    80,
    199.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "B",
    153,
    91,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    150,
    96,
    133.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "C",
    153,
    107,
  ],
  Array [
    "set fillStyle",
    "#45a1ff60",
  ],
  Array [
    "fillRect",
    284,
    96,
    65.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "H",
    286.3333333333333,
    107,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    150,
    112,
    66.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "D",
    153,
    123,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    217,
    112,
    66.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "F",
    219.66666666666666,
    123,
  ],
  Array [
    "set fillStyle",
    "#45a1ff60",
  ],
  Array [
    "fillRect",
    284,
    112,
    65.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "I",
    286.3333333333333,
    123,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    150,
    128,
    66.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "E",
    153,
    139,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    217,
    128,
    66.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "G",
    219.66666666666666,
    139,
  ],
  Array [
    "set fillStyle",
    "#d7d7db",
  ],
  Array [
    "fillRect",
    150,
    0,
    1,
    300,
  ],
  Array [
    "fillRect",
    350,
    0,
    1,
    300,
  ],
]
`;

exports[`MarkerChart matches the snapshots for the component and draw log 1`] = `
<div
  aria-labelledby="stack-chart-tab-button"
  class="stackChart"
  id="stack-chart-tab"
  role="tabpanel"
>
  <div
    class="stackSettings"
  >
    <ul
      class="panelSettingsList"
    >
      <li
        class="panelSettingsListItem"
      >
        <input
          checked=""
          class="photon-radio photon-radio-micro"
          id="implementation-radio-combined"
          title="Do not filter the stack frames"
          type="radio"
          value="combined"
        />
        <label
          class="photon-label photon-label-micro photon-label-horiz-padding"
          for="implementation-radio-combined"
          title="Do not filter the stack frames"
        >
          All frames
        </label>
        <input
          class="photon-radio photon-radio-micro"
          id="implementation-radio-js"
          title="Show only the stack frames related to script execution"
          type="radio"
          value="js"
        />
        <label
          class="photon-label photon-label-micro photon-label-horiz-padding"
          for="implementation-radio-js"
          title="Show only the stack frames related to script execution"
        >
          Script
        </label>
        <input
          class="photon-radio photon-radio-micro"
          id="implementation-radio-cpp"
          title="Show only the stack frames for native code"
          type="radio"
          value="cpp"
        />
        <label
          class="photon-label photon-label-micro photon-label-horiz-padding"
          for="implementation-radio-cpp"
          title="Show only the stack frames for native code"
        >
          Native
        </label>
      </li>
      <li
        class="panelSettingsListItem"
      >
        <label
          class="photon-label photon-label-micro photon-label-horiz-padding"
        >
          <input
            class="photon-checkbox photon-checkbox-micro stackSettingsCheckbox"
            type="checkbox"
          />
          Show user timing
        </label>
        <label
          class="photon-label photon-label-micro photon-label-horiz-padding"
        >
          <input
            class="photon-checkbox photon-checkbox-micro stackSettingsCheckbox"
            type="checkbox"
          />
          Use the same width for each stack
        </label>
      </li>
    </ul>
    <div
      class="panelSearchField stackSettingsSearchField"
    >
      <label
        class="panelSearchFieldLabel"
      >
        Filter stacks: 
        <form
          class="idleSearchField panelSearchFieldInput"
        >
          <input
            class="idleSearchFieldInput photon-input"
            name="search"
            placeholder="Enter filter terms"
            required=""
            title="Only display stacks which contain a function whose name matches this substring"
            type="search"
            value=""
          />
          <input
            class="idleSearchFieldButton"
            tabindex="-1"
            type="reset"
          />
        </form>
      </label>
      <div
        class="panelSearchFieldIntroduction isHidden"
      >
        Did you know you can use the comma (,) to search using several terms?
      </div>
    </div>
  </div>
  <ol
    class="filterNavigatorBar calltreeTransformNavigator"
  >
    <li
      class="filterNavigatorBarItem filterNavigatorBarRootItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem"
    >
      <span
        class="filterNavigatorBarItemContent"
      >
        Complete “⁨Empty⁩”
      </span>
    </li>
  </ol>
  <div
    class="react-contextmenu-wrapper treeViewContextMenu"
  >
    <div
      class="stackChartContent"
    >
      <div
        class="chartViewport"
        tabindex="0"
      >
        <div>
          <canvas
            class="chartCanvas stackChartCanvas"
            height="300"
            style="width: 365px; height: 300px;"
            width="365"
          />
        </div>
        <div
          class="chartViewportScroll hidden"
        >
          Zoom Chart:
          <kbd
            class="chartViewportScrollKbd"
          >
            Ctrl + Scroll
          </kbd>
          or
          <kbd
            class="chartViewportScrollKbd"
          >
            Shift + Scroll
          </kbd>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MarkerChart matches the snapshots for the component and draw log 2`] = `
Array [
  Array [
    "set font",
    "10px sans-serif",
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    0,
    365,
    300,
  ],
  Array [
    "set fillStyle",
    "#ffe90070",
  ],
  Array [
    "fillRect",
    150,
    0,
    181.4,
    15,
  ],
  Array [
    "measureText",
    "renderFunction",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "renderFunction",
    153,
    11,
  ],
  Array [
    "set fillStyle",
    "#ffe90070",
  ],
  Array [
    "fillRect",
    168,
    16,
    145.4,
    15,
  ],
  Array [
    "measureText",
    "componentA",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "componentA",
    171.1818181818182,
    27,
  ],
  Array [
    "set fillStyle",
    "#ffe90070",
  ],
  Array [
    "fillRect",
    186,
    32,
    72.4,
    15,
  ],
  Array [
    "measureText",
    "componentB",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "componentB",
    189.36363636363637,
    43,
  ],
  Array [
    "set fillStyle",
    "#ffe90070",
  ],
  Array [
    "fillRect",
    277,
    32,
    18.4,
    15,
  ],
  Array [
    "measureText",
    "componentD",
  ],
  Array [
    "measureText",
    "c",
  ],
  Array [
    "measureText",
    "co",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "c…",
    280.27272727272725,
    43,
  ],
  Array [
    "set fillStyle",
    "#ffe90070",
  ],
  Array [
    "fillRect",
    204,
    48,
    18.4,
    15,
  ],
  Array [
    "measureText",
    "componentC",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "c…",
    207.54545454545453,
    59,
  ],
  Array [
    "set fillStyle",
    "#d7d7db",
  ],
  Array [
    "fillRect",
    150,
    0,
    1,
    300,
  ],
  Array [
    "fillRect",
    350,
    0,
    1,
    300,
  ],
]
`;

exports[`MarkerChart shows a tooltip when hovering 1`] = `
<div
  class="tooltip"
  data-testid="tooltip"
  style="left: 200.36363636363637px; top: 54px;"
>
  <div
    class="tooltipMarker"
  >
    <div
      class="tooltipHeader"
    >
      <div
        class="tooltipOneLine"
      >
        <div
          class="tooltipTiming"
        >
          4ms
        </div>
        <div
          class="tooltipTitle"
        >
          <span
            class="tooltipTitleText"
          >
            componentB
          </span>
          <button
            aria-label="Only show markers matching: “⁨componentB⁩”"
            class="tooltipTitleFilterButton"
            title="Only show markers matching: “⁨componentB⁩”"
            type="button"
          />
        </div>
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Description
        :
      </div>
      <div
        class="tooltipDetailsDescription"
      >
        UserTiming is created using the DOM APIs performance.mark() and performance.measure().
      </div>
      <div
        class="tooltipLabel"
      >
        Name
        :
      </div>
      componentB
      <div
        class="tooltipLabel"
      >
        Entry Type
        :
      </div>
      measure
      <div
        class="tooltipLabel"
      >
        Track
        :
      </div>
      Empty
    </div>
  </div>
</div>
`;

exports[`MarkerChart shows a tooltip when hovering 2`] = `
<div
  class="tooltip"
  data-testid="tooltip"
  style="left: 182.1818181818182px; top: 38px;"
>
  <div
    class="tooltipMarker"
  >
    <div
      class="tooltipHeader"
    >
      <div
        class="tooltipOneLine"
      >
        <div
          class="tooltipTiming"
        >
          8ms
        </div>
        <div
          class="tooltipTitle"
        >
          <span
            class="tooltipTitleText"
          >
            componentA
          </span>
          <button
            aria-label="Only show markers matching: “⁨componentA⁩”"
            class="tooltipTitleFilterButton"
            title="Only show markers matching: “⁨componentA⁩”"
            type="button"
          />
        </div>
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Description
        :
      </div>
      <div
        class="tooltipDetailsDescription"
      >
        UserTiming is created using the DOM APIs performance.mark() and performance.measure().
      </div>
      <div
        class="tooltipLabel"
      >
        Name
        :
      </div>
      componentA
      <div
        class="tooltipLabel"
      >
        Entry Type
        :
      </div>
      measure
      <div
        class="tooltipLabel"
      >
        Track
        :
      </div>
      Empty
    </div>
  </div>
</div>
`;

exports[`StackChart EmptyReasons shows reasons when a profile has no samples 1`] = `
<div
  class="EmptyReasons"
>
  <h3>
    The 
    stack chart
     is empty for “
    Empty Thread
    ”
  </h3>
  <p>
    This thread has no samples.
  </p>
</div>
`;

exports[`StackChart EmptyReasons shows reasons when samples are out of range 1`] = `
<div
  class="EmptyReasons"
>
  <h3>
    The 
    stack chart
     is empty for “
    Empty
    ”
  </h3>
  <p>
    Broaden the selected range to view samples.
  </p>
</div>
`;

exports[`StackChart EmptyReasons shows reasons when samples have been completely filtered out 1`] = `
<div
  class="EmptyReasons"
>
  <h3>
    The 
    stack chart
     is empty for “
    Empty
    ”
  </h3>
  <p>
    Try broadening the selected range, removing search terms, or call tree transforms to view samples.
  </p>
</div>
`;

exports[`StackChart matches the snapshot and can display a tooltip with the same widths option: dom 1`] = `
<body>
  <div
    id="root-overlay"
  />
  <div>
    <div
      aria-labelledby="stack-chart-tab-button"
      class="stackChart"
      id="stack-chart-tab"
      role="tabpanel"
    >
      <div
        class="stackSettings"
      >
        <ul
          class="panelSettingsList"
        >
          <li
            class="panelSettingsListItem"
          >
            <input
              checked=""
              class="photon-radio photon-radio-micro"
              id="implementation-radio-combined"
              title="Do not filter the stack frames"
              type="radio"
              value="combined"
            />
            <label
              class="photon-label photon-label-micro photon-label-horiz-padding"
              for="implementation-radio-combined"
              title="Do not filter the stack frames"
            >
              All frames
            </label>
            <input
              class="photon-radio photon-radio-micro"
              id="implementation-radio-js"
              title="Show only the stack frames related to script execution"
              type="radio"
              value="js"
            />
            <label
              class="photon-label photon-label-micro photon-label-horiz-padding"
              for="implementation-radio-js"
              title="Show only the stack frames related to script execution"
            >
              Script
            </label>
            <input
              class="photon-radio photon-radio-micro"
              id="implementation-radio-cpp"
              title="Show only the stack frames for native code"
              type="radio"
              value="cpp"
            />
            <label
              class="photon-label photon-label-micro photon-label-horiz-padding"
              for="implementation-radio-cpp"
              title="Show only the stack frames for native code"
            >
              Native
            </label>
          </li>
          <li
            class="panelSettingsListItem"
          >
            <label
              class="photon-label photon-label-micro photon-label-horiz-padding"
            >
              <input
                class="photon-checkbox photon-checkbox-micro stackSettingsCheckbox"
                type="checkbox"
              />
              Show user timing
            </label>
            <label
              class="photon-label photon-label-micro photon-label-horiz-padding"
            >
              <input
                class="photon-checkbox photon-checkbox-micro stackSettingsCheckbox"
                type="checkbox"
              />
              Use the same width for each stack
            </label>
          </li>
        </ul>
        <div
          class="panelSearchField stackSettingsSearchField"
        >
          <label
            class="panelSearchFieldLabel"
          >
            Filter stacks: 
            <form
              class="idleSearchField panelSearchFieldInput"
            >
              <input
                class="idleSearchFieldInput photon-input"
                name="search"
                placeholder="Enter filter terms"
                required=""
                title="Only display stacks which contain a function whose name matches this substring"
                type="search"
                value=""
              />
              <input
                class="idleSearchFieldButton"
                tabindex="-1"
                type="reset"
              />
            </form>
          </label>
          <div
            class="panelSearchFieldIntroduction isHidden"
          >
            Did you know you can use the comma (,) to search using several terms?
          </div>
        </div>
      </div>
      <ol
        class="filterNavigatorBar calltreeTransformNavigator"
      >
        <li
          class="filterNavigatorBarItem filterNavigatorBarRootItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem"
        >
          <span
            class="filterNavigatorBarItemContent"
          >
            Complete “⁨Empty⁩”
          </span>
        </li>
      </ol>
      <div
        class="react-contextmenu-wrapper treeViewContextMenu"
      >
        <div
          class="stackChartContent"
        >
          <div
            class="chartViewport"
            tabindex="0"
          >
            <div>
              <canvas
                class="chartCanvas stackChartCanvas"
                height="300"
                style="width: 365px; height: 300px;"
                width="365"
              />
            </div>
            <div
              class="chartViewportScroll hidden"
            >
              Zoom Chart:
              <kbd
                class="chartViewportScrollKbd"
              >
                Ctrl + Scroll
              </kbd>
              or
              <kbd
                class="chartViewportScrollKbd"
              >
                Shift + Scroll
              </kbd>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`StackChart matches the snapshot and can display a tooltip with the same widths option: draw calls 1`] = `
Array [
  Array [
    "set font",
    "10px sans-serif",
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    0,
    365,
    300,
  ],
  Array [
    "set fillStyle",
    "#0060df60",
  ],
  Array [
    "fillRect",
    150,
    0,
    199.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "A",
    153,
    11,
  ],
  Array [
    "set fillStyle",
    "#0060df60",
  ],
  Array [
    "fillRect",
    150,
    16,
    199.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "B",
    153,
    27,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    150,
    32,
    133.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "C",
    153,
    43,
  ],
  Array [
    "set fillStyle",
    "#45a1ff60",
  ],
  Array [
    "fillRect",
    284,
    32,
    66.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "H",
    286.33333333333337,
    43,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    150,
    48,
    66.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "D",
    153,
    59,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    217,
    48,
    66.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "F",
    219.66666666666669,
    59,
  ],
  Array [
    "set fillStyle",
    "#45a1ff60",
  ],
  Array [
    "fillRect",
    284,
    48,
    66.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "I",
    286.33333333333337,
    59,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    150,
    64,
    66.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "E",
    153,
    75,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    217,
    64,
    66.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "G",
    219.66666666666669,
    75,
  ],
  Array [
    "set fillStyle",
    "#d7d7db",
  ],
  Array [
    "fillRect",
    150,
    0,
    1,
    300,
  ],
  Array [
    "fillRect",
    350,
    0,
    1,
    300,
  ],
]
`;

exports[`StackChart matches the snapshot and can display a tooltip with the same widths option: draw calls for preview selection 1`] = `
Array [
  Array [
    "set font",
    "10px sans-serif",
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    0,
    365,
    300,
  ],
  Array [
    "set fillStyle",
    "#0060df60",
  ],
  Array [
    "fillRect",
    0,
    0,
    349.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "A",
    3,
    11,
  ],
  Array [
    "set fillStyle",
    "#0060df60",
  ],
  Array [
    "fillRect",
    0,
    16,
    349.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "B",
    3,
    27,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    0,
    32,
    149.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "C",
    3,
    43,
  ],
  Array [
    "set fillStyle",
    "#45a1ff60",
  ],
  Array [
    "fillRect",
    150,
    32,
    199.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "H",
    153,
    43,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    0,
    48,
    149.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "F",
    3,
    59,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    150,
    48,
    199.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000",
  ],
  Array [
    "fillText",
    "I",
    153,
    59,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    0,
    64,
    149.4,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "G",
    3,
    75,
  ],
  Array [
    "set fillStyle",
    "#d7d7db",
  ],
  Array [
    "fillRect",
    -1916.6666666666679,
    0,
    1,
    300,
  ],
  Array [
    "fillRect",
    750.0000000000002,
    0,
    1,
    300,
  ],
]
`;

exports[`StackChart matches the snapshot and can display a tooltip with the same widths option: tooltip 1`] = `
<div
  class="tooltip"
  data-testid="tooltip"
  style="left: 297.33333333333337px; top: 70px;"
>
  <div
    class="tooltipCallNode"
  >
    <div
      class="tooltipOneLine tooltipHeader"
    >
      <div
        class="tooltipTiming"
      >
        1.0ms
      </div>
      <div
        class="tooltipTitle"
      >
        I
      </div>
      <div
        class="tooltipIcon"
      />
    </div>
    <div
      class="tooltipCallNodeDetails"
    >
      <div
        class="tooltipDetails tooltipCallNodeDetailsLeft"
      >
        <div
          class="tooltipLabel"
        >
          Stack Type:
        </div>
        <div>
          Native
        </div>
        <div
          class="tooltipLabel"
        >
          Category:
        </div>
        <div>
          <span
            class="colored-square category-color-lightblue"
          />
          Network
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackChart matches the snapshot and can display a tooltip with the same widths option: tooltip after preview selection 1`] = `
<div
  class="tooltip"
  data-testid="tooltip"
  style="left: 164px; top: 54px;"
>
  <div
    class="tooltipCallNode"
  >
    <div
      class="tooltipOneLine tooltipHeader"
    >
      <div
        class="tooltipTiming"
      >
        1.0ms
      </div>
      <div
        class="tooltipTitle"
      >
        H
      </div>
      <div
        class="tooltipIcon"
      />
    </div>
    <div
      class="tooltipCallNodeDetails"
    >
      <div
        class="tooltipDetails tooltipCallNodeDetailsLeft"
      >
        <div
          class="tooltipLabel"
        >
          Stack Type:
        </div>
        <div>
          Native
        </div>
        <div
          class="tooltipLabel"
        >
          Category:
        </div>
        <div>
          <span
            class="colored-square category-color-lightblue"
          />
          Network
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackChart matches the snapshot and can display a tooltip: dom 1`] = `
<div
  aria-labelledby="stack-chart-tab-button"
  class="stackChart"
  id="stack-chart-tab"
  role="tabpanel"
>
  <div
    class="stackSettings"
  >
    <ul
      class="panelSettingsList"
    >
      <li
        class="panelSettingsListItem"
      >
        <input
          checked=""
          class="photon-radio photon-radio-micro"
          id="implementation-radio-combined"
          title="Do not filter the stack frames"
          type="radio"
          value="combined"
        />
        <label
          class="photon-label photon-label-micro photon-label-horiz-padding"
          for="implementation-radio-combined"
          title="Do not filter the stack frames"
        >
          All frames
        </label>
        <input
          class="photon-radio photon-radio-micro"
          id="implementation-radio-js"
          title="Show only the stack frames related to script execution"
          type="radio"
          value="js"
        />
        <label
          class="photon-label photon-label-micro photon-label-horiz-padding"
          for="implementation-radio-js"
          title="Show only the stack frames related to script execution"
        >
          Script
        </label>
        <input
          class="photon-radio photon-radio-micro"
          id="implementation-radio-cpp"
          title="Show only the stack frames for native code"
          type="radio"
          value="cpp"
        />
        <label
          class="photon-label photon-label-micro photon-label-horiz-padding"
          for="implementation-radio-cpp"
          title="Show only the stack frames for native code"
        >
          Native
        </label>
      </li>
      <li
        class="panelSettingsListItem"
      >
        <label
          class="photon-label photon-label-micro photon-label-horiz-padding"
        >
          <input
            class="photon-checkbox photon-checkbox-micro stackSettingsCheckbox"
            type="checkbox"
          />
          Show user timing
        </label>
        <label
          class="photon-label photon-label-micro photon-label-horiz-padding"
        >
          <input
            class="photon-checkbox photon-checkbox-micro stackSettingsCheckbox"
            type="checkbox"
          />
          Use the same width for each stack
        </label>
      </li>
    </ul>
    <div
      class="panelSearchField stackSettingsSearchField"
    >
      <label
        class="panelSearchFieldLabel"
      >
        Filter stacks: 
        <form
          class="idleSearchField panelSearchFieldInput"
        >
          <input
            class="idleSearchFieldInput photon-input"
            name="search"
            placeholder="Enter filter terms"
            required=""
            title="Only display stacks which contain a function whose name matches this substring"
            type="search"
            value=""
          />
          <input
            class="idleSearchFieldButton"
            tabindex="-1"
            type="reset"
          />
        </form>
      </label>
      <div
        class="panelSearchFieldIntroduction isHidden"
      >
        Did you know you can use the comma (,) to search using several terms?
      </div>
    </div>
  </div>
  <ol
    class="filterNavigatorBar calltreeTransformNavigator"
  >
    <li
      class="filterNavigatorBarItem filterNavigatorBarRootItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem"
    >
      <span
        class="filterNavigatorBarItemContent"
      >
        Complete “⁨Empty⁩”
      </span>
    </li>
  </ol>
  <div
    class="react-contextmenu-wrapper treeViewContextMenu"
  >
    <div
      class="stackChartContent"
    >
      <div
        class="chartViewport"
        tabindex="0"
      >
        <div>
          <canvas
            class="chartCanvas stackChartCanvas"
            height="300"
            style="width: 365px; height: 300px;"
            width="365"
          />
        </div>
        <div
          class="chartViewportScroll hidden"
        >
          Zoom Chart:
          <kbd
            class="chartViewportScrollKbd"
          >
            Ctrl + Scroll
          </kbd>
          or
          <kbd
            class="chartViewportScrollKbd"
          >
            Shift + Scroll
          </kbd>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackChart matches the snapshot and can display a tooltip: draw calls 1`] = `
Array [
  Array [
    "set font",
    "10px sans-serif",
  ],
  Array [
    "measureText",
    "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.()< /:-_",
  ],
  Array [
    "measureText",
    "…",
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    0,
    365,
    300,
  ],
  Array [
    "set fillStyle",
    "#0060df60",
  ],
  Array [
    "fillRect",
    150,
    0,
    199.4,
    15,
  ],
  Array [
    "measureText",
    "A",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "A",
    153,
    11,
  ],
  Array [
    "set fillStyle",
    "#0060df60",
  ],
  Array [
    "fillRect",
    150,
    16,
    199.4,
    15,
  ],
  Array [
    "measureText",
    "B",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "B",
    153,
    27,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    150,
    32,
    133.4,
    15,
  ],
  Array [
    "measureText",
    "C",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "C",
    153,
    43,
  ],
  Array [
    "set fillStyle",
    "#45a1ff60",
  ],
  Array [
    "fillRect",
    284,
    32,
    65.4,
    15,
  ],
  Array [
    "measureText",
    "H",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "H",
    286.3333333333333,
    43,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    150,
    48,
    66.4,
    15,
  ],
  Array [
    "measureText",
    "D",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "D",
    153,
    59,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    217,
    48,
    66.4,
    15,
  ],
  Array [
    "measureText",
    "F",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "F",
    219.66666666666666,
    59,
  ],
  Array [
    "set fillStyle",
    "#45a1ff60",
  ],
  Array [
    "fillRect",
    284,
    48,
    65.4,
    15,
  ],
  Array [
    "measureText",
    "I",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "I",
    286.3333333333333,
    59,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    150,
    64,
    66.4,
    15,
  ],
  Array [
    "measureText",
    "E",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "E",
    153,
    75,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    217,
    64,
    66.4,
    15,
  ],
  Array [
    "measureText",
    "G",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "G",
    219.66666666666666,
    75,
  ],
  Array [
    "set fillStyle",
    "#d7d7db",
  ],
  Array [
    "fillRect",
    150,
    0,
    1,
    300,
  ],
  Array [
    "fillRect",
    350,
    0,
    1,
    300,
  ],
]
`;

exports[`StackChart matches the snapshot and can display a tooltip: tooltip 1`] = `
<div
  class="tooltip"
  data-testid="tooltip"
  style="left: 164px; top: 38px;"
>
  <div
    class="tooltipCallNode"
  >
    <div
      class="tooltipOneLine tooltipHeader"
    >
      <div
        class="tooltipTiming"
      >
        3.0ms
      </div>
      <div
        class="tooltipTitle"
      >
        B
      </div>
      <div
        class="tooltipIcon"
      />
    </div>
    <div
      class="tooltipCallNodeDetails"
    >
      <div
        class="tooltipDetails tooltipCallNodeDetailsLeft"
      >
        <div
          class="tooltipLabel"
        >
          Stack Type:
        </div>
        <div>
          Native
        </div>
        <div
          class="tooltipLabel"
        >
          Category:
        </div>
        <div>
          <span
            class="colored-square category-color-blue"
          />
          DOM
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackChart works when the user selects the JS allocations option 1`] = `
<body>
  <div
    id="root-overlay"
  />
  <div>
    <div
      aria-labelledby="stack-chart-tab-button"
      class="stackChart"
      id="stack-chart-tab"
      role="tabpanel"
    >
      <div
        class="stackSettings"
      >
        <ul
          class="panelSettingsList"
        >
          <li
            class="panelSettingsListItem"
          >
            <input
              checked=""
              class="photon-radio photon-radio-micro"
              id="implementation-radio-combined"
              title="Do not filter the stack frames"
              type="radio"
              value="combined"
            />
            <label
              class="photon-label photon-label-micro photon-label-horiz-padding"
              for="implementation-radio-combined"
              title="Do not filter the stack frames"
            >
              All frames
            </label>
            <input
              class="photon-radio photon-radio-micro"
              id="implementation-radio-js"
              title="Show only the stack frames related to script execution"
              type="radio"
              value="js"
            />
            <label
              class="photon-label photon-label-micro photon-label-horiz-padding"
              for="implementation-radio-js"
              title="Show only the stack frames related to script execution"
            >
              Script
            </label>
            <input
              class="photon-radio photon-radio-micro"
              id="implementation-radio-cpp"
              title="Show only the stack frames for native code"
              type="radio"
              value="cpp"
            />
            <label
              class="photon-label photon-label-micro photon-label-horiz-padding"
              for="implementation-radio-cpp"
              title="Show only the stack frames for native code"
            >
              Native
            </label>
          </li>
          <li
            class="panelSettingsListItem"
          >
            <label>
              Data source:
               
              <select
                class="stackSettingsSelect"
              >
                <option
                  title="Summarize using sampled stacks of executed code over time"
                  value="timing"
                >
                  Timings
                </option>
                <option
                  title="Summarize using bytes of JavaScript allocated (no de-allocations)"
                  value="js-allocations"
                >
                  JavaScript Allocations
                </option>
              </select>
            </label>
          </li>
          <li
            class="panelSettingsListItem"
          >
            <label
              class="photon-label photon-label-micro photon-label-horiz-padding"
            >
              <input
                class="photon-checkbox photon-checkbox-micro stackSettingsCheckbox"
                type="checkbox"
              />
              Show user timing
            </label>
            <label
              class="photon-label photon-label-micro photon-label-horiz-padding"
            >
              <input
                class="photon-checkbox photon-checkbox-micro stackSettingsCheckbox"
                type="checkbox"
              />
              Use the same width for each stack
            </label>
          </li>
        </ul>
        <div
          class="panelSearchField stackSettingsSearchField"
        >
          <label
            class="panelSearchFieldLabel"
          >
            Filter stacks: 
            <form
              class="idleSearchField panelSearchFieldInput"
            >
              <input
                class="idleSearchFieldInput photon-input"
                name="search"
                placeholder="Enter filter terms"
                required=""
                title="Only display stacks which contain a function whose name matches this substring"
                type="search"
                value=""
              />
              <input
                class="idleSearchFieldButton"
                tabindex="-1"
                type="reset"
              />
            </form>
          </label>
          <div
            class="panelSearchFieldIntroduction isHidden"
          >
            Did you know you can use the comma (,) to search using several terms?
          </div>
        </div>
      </div>
      <ol
        class="filterNavigatorBar calltreeTransformNavigator"
      >
        <li
          class="filterNavigatorBarItem filterNavigatorBarRootItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem"
        >
          <span
            class="filterNavigatorBarItemContent"
          >
            Complete “⁨Empty⁩”
          </span>
        </li>
      </ol>
      <div
        class="react-contextmenu-wrapper treeViewContextMenu"
      >
        <div
          class="stackChartContent"
        >
          <div
            class="chartViewport"
            tabindex="0"
          >
            <div>
              <canvas
                class="chartCanvas stackChartCanvas"
                height="300"
                style="width: 365px; height: 300px;"
                width="365"
              />
            </div>
            <div
              class="chartViewportScroll hidden"
            >
              Zoom Chart:
              <kbd
                class="chartViewportScrollKbd"
              >
                Ctrl + Scroll
              </kbd>
              or
              <kbd
                class="chartViewportScrollKbd"
              >
                Shift + Scroll
              </kbd>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`StackChart works when the user selects the JS allocations option 2`] = `
Array [
  Array [
    "set font",
    "10px sans-serif",
  ],
  Array [
    "measureText",
    "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.()< /:-_",
  ],
  Array [
    "measureText",
    "…",
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    0,
    365,
    300,
  ],
  Array [
    "set fillStyle",
    "#b1b1b360",
  ],
  Array [
    "fillRect",
    150,
    0,
    199.4,
    15,
  ],
  Array [
    "measureText",
    "A",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "A",
    153,
    11,
  ],
  Array [
    "set fillStyle",
    "#b1b1b360",
  ],
  Array [
    "fillRect",
    150,
    16,
    199.4,
    15,
  ],
  Array [
    "measureText",
    "B",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "B",
    153,
    27,
  ],
  Array [
    "set fillStyle",
    "#b1b1b360",
  ],
  Array [
    "fillRect",
    150,
    32,
    66.4,
    15,
  ],
  Array [
    "measureText",
    "C",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "C",
    153,
    43,
  ],
  Array [
    "set fillStyle",
    "#ffe90070",
  ],
  Array [
    "fillRect",
    217,
    32,
    132.4,
    15,
  ],
  Array [
    "measureText",
    "Fjs",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "Fjs",
    219.66666666666666,
    43,
  ],
  Array [
    "set fillStyle",
    "#b1b1b360",
  ],
  Array [
    "fillRect",
    150,
    48,
    66.4,
    15,
  ],
  Array [
    "measureText",
    "D",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "D",
    153,
    59,
  ],
  Array [
    "set fillStyle",
    "#ffe90070",
  ],
  Array [
    "fillRect",
    217,
    48,
    132.4,
    15,
  ],
  Array [
    "measureText",
    "Gjs",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "Gjs",
    219.66666666666666,
    59,
  ],
  Array [
    "set fillStyle",
    "#b1b1b360",
  ],
  Array [
    "fillRect",
    150,
    64,
    66.4,
    15,
  ],
  Array [
    "measureText",
    "E",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "E",
    153,
    75,
  ],
  Array [
    "set fillStyle",
    "#ffe90070",
  ],
  Array [
    "fillRect",
    283,
    64,
    66.4,
    15,
  ],
  Array [
    "measureText",
    "Hjs",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "Hjs",
    286.3333333333333,
    75,
  ],
  Array [
    "set fillStyle",
    "#ffe90070",
  ],
  Array [
    "fillRect",
    283,
    80,
    66.4,
    15,
  ],
  Array [
    "measureText",
    "I",
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "I",
    286.3333333333333,
    91,
  ],
  Array [
    "set fillStyle",
    "#d7d7db",
  ],
  Array [
    "fillRect",
    150,
    0,
    1,
    300,
  ],
  Array [
    "fillRect",
    350,
    0,
    1,
    300,
  ],
]
`;
